# localstack_demo

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  LICENSE  README.md  compose.yaml  justfile  manage.py  pyproject.toml
localstack_demo/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
localstack_demo/accounts/: admin.py  apps.py  managers.py  models.py
localstack_demo/accounts/migrations/: 0001_initial.py
localstack_demo/core/: apps.py  models.py
localstack_demo/core/management/commands/: bootstrap_lambda.py  bootstrap_s3.py  bootstrap_sqs.py  configure_s3_versioning.py  test_lambda.py
localstack_demo/photos/: admin.py  apps.py  models.py  views.py
localstack_demo/photos/migrations/: 0001_initial.py
localstack_demo/templates/photos/: photo_upload.html
slides/localstack/: package.json  pnpm-lock.yaml  slides.md
