[project]
name = "localstack-demo"
version = "0.1.0"
description = "LocalStack and Django integration demo for local development with AWS services."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[sqs]>=5.5.2",
    "django>=5.2",
    "django-extensions>=4.1",
    "django-storages[s3]>=1.14.6",
    "environs>=14.1.1",
    "ipython>=9.2.0",
    "pillow>=11.2.1",
    "redis>=6.0.0",
    "requests>=2.32.3",
]

[dependency-groups]
lint = [
    "ruff>=0.11.8",
]
dev = [
    {include-group = "lint"},
    "pre-commit>=4.2.0",
    "ipdb>=0.13.13",
]

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "C90", # mccabe
    "I",   # isort
    "UP",  # pyupgrade
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T10", # flake8-debugger
    "DJ",  # flake8-django
    "PT",  # flake8-pytest-style
    "TID", # flake8-tidy-imports
    "INT", # flake8-gettext
    "PTH", # flake8-use-pathlib
]

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports
ban-relative-imports = "all"
